bin_PROGRAMS = cued
cued_SOURCES = rip.c sheet.c cued.c \
               rip.h sheet.h

AM_CPPFLAGS = $(LIBCDIO_CFLAGS) $(LIBCDIOPARANOIA_CFLAGS) $(LIBSNDFILE_CFLAGS) $(LIBCDDB_CFLAGS) $(LIBCUED_CPPFLAGS) @AM_CPPFLAGS@
cued_LDADD = $(LIBCDIO_LIBS) $(LIBCDIOPARANOIA_LIBS) $(LIBSNDFILE_LIBS) $(LIBCDDB_LIBS) $(LIBCUED_LIBS)
